Update README.md
Added steps on how to make a 5MB java application with full java runtime.